# protenix-jax

./: .gitignore  README.md  pyproject.toml
docs/: PORTING_PLAN.md
scripts/: build_ccd_ligands_npz.py  build_ccd_nucleotides_npz.py  parity_matched_noise.py
src/protenix_jax/: __init__.py  chunking.py  runtime_policy.py
src/protenix_jax/bridge/: __init__.py  torch_mapping.py  weights_io.py
src/protenix_jax/cli/: __init__.py  predict.py  static_infer.py
src/protenix_jax/data/: __init__.py  ccd_ligands.npz  ccd_nucleotides.npz  ccd_std_residues.npz  featurize_json.py  static_io.py  template_features.py
src/protenix_jax/models/: __init__.py  model.py  predict.py
src/protenix_jax/models/diffusion/: __init__.py  atom.py  diffusion.py  transformer.py
src/protenix_jax/models/heads/: __init__.py  confidence.py  head.py
src/protenix_jax/models/primitives/: __init__.py  attention.py  primitives.py
tests/: state_dict_helpers.py  test_atom.py  test_attention.py  test_chunking.py  test_confidence.py  test_diffusion_conditioning.py  test_diffusion_sampler.py  test_distogram_head.py  test_featurize_json.py  test_model.py  test_msa.py  test_pairformer.py  test_predict_wrapper.py  test_primitives.py  test_relative_position.py  test_runtime_policy.py  test_standalone_runtime.py  test_state_dict_mapping.py  test_static_infer_cli.py  test_static_io.py  test_template.py  test_template_features.py  test_transformer.py  test_triangle.py  test_trunk.py  test_weights_io.py
tests/fixtures/: template_small.json  template_small_golden.b64
(+8 files in other folders)
