[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protenix-jax"
version = "0.1.0"
description = "Experimental JAX inference port for Protenix"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "jax>=0.7.1",
    "numpy>=2.0",
    "gemmi>=0.6",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.7.1"]
cuda13 = ["jax[cuda13]>=0.7.1"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]
torch-bridge = ["torch>=2.2"]

[project.scripts]
protenix-jax-featurize-json = "protenix_jax.data.featurize_json:main"
protenix-jax-predict = "protenix_jax.cli.predict:main"
protenix-jax-static-infer = "protenix_jax.cli.static_infer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
protenix_jax = ["data/*.npz"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
